# movie-bookings

./: .gitignore  .gitmodules  LICENSE.txt  README.md
MovieBooking/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.txt  client_zmq.py  client_zmq_async.py  conan.md  conanfile.txt  docker_build.sh  docker_init.sh  docker_preset.sh  docker_run.sh  start_zmq_clients.bat  start_zmq_clients.sh  start_zmq_clients_sync.bat  start_zmq_clients_sync.sh  vcpkg.json  zmq_clients_test_async.bat
MovieBooking/client/: client.py  client_fsm.py  client_module.py  client_receiver.py  client_zmq_async.py  zmq_network.py
MovieBooking/lib/: CMakeLists.txt  movie_booking.cpp
MovieBooking/lib/include/mbooking/: movie_booking.h  movie_booking.ixx
MovieBooking/lib/src/: api.ixx  cmd.cpp  cmd.hpp  cmd_parse.cpp  cmd_parse.hpp  mb_service.cpp  mb_service.cxx  mb_service.hpp  mb_service.ixx  movie_booking.cpp  movie_booking.cxx  movie_booking.hpp  movie_booking.ixx  utils.hpp  workers.cpp  workers.cxx  workers.hpp  workers.ixx  zero_mq.cpp  zero_mq.hpp  zeromq_async.cpp  zeromq_async.hpp  zeromq_sync.cpp
MovieBooking/src/: CMakeLists.txt  main.cpp  zero_mq.cpp  zero_mq.hpp  zeromq_async.cpp
MovieBooking/tests/: CMakeLists.txt  dummy_test.cpp  mb_service_test.cpp
